tests/data/check_default_deny_policy_exists/cluster/network_policies_api_response.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "name": "deny-ingress",
                "namespace": "good"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": ["Ingress"]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "name": "deny-egress",
                "namespace": "good"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": ["Egress"]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "name": "deny-all",
                "namespace": "good2"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": ["Ingress", "Egress"]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "name": "deny-ingress-only",
                "namespace": "bad"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": ["Ingress"]
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": ""
    }
}
