tests/data/check_default_deny_policy_exists/cluster/networkpolicy_api_response.json
{
  "items": [
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"NetworkPolicy\",\"metadata\":{\"annotations\":{},\"name\":\"good\",\"namespace\":\"good\"},\"spec\":{\"podSelector\":{},\"policyTypes\":[\"Ingress\",\"Egress\"]}}\n"
        },
        "creationTimestamp": "2026-03-07T04:22:32Z",
        "generation": 1,
        "name": "good",
        "namespace": "good",
        "resourceVersion": "687998816",
        "uid": "be10db38-6184-4660-b7a0-d9a4a14ccaf9"
      },
      "spec": {
        "podSelector": {},
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    }
  ],
  "kind": "NetworkPolicyList"
}
